...
import Foundation
import UIKit

extension UIViewController {
    func alert(title: String, message: String) {
        let controller = UIAlertController(title: title, message: message, preferredStyle: .alert)
        controller.addAction(UIAlertAction(title: "OK", style: .default))
        DispatchQueue.main.async {
            self.present(controller, animated: true)
        }
    }
    
    func alert(title: String, message: String, completion: @escaping()->Void) {
...
